[package]
name = "rusty-daw-audio-graph"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-daw-core = { path = "../rusty-daw-core" }
# clap-sys = { git = "https://github.com/glowcoil/clap-sys.git", branch = "master" }
clap-sys = { path = "../clap-sys" }
bitflags = "1.3.2"
language-tags = "0.3.2"
basedrop = "0.1.2"
smallvec = "1.7"
ringbuf = "0.2"
fnv = "1.0"
log = "0.4"